--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:text="@string/contact_label_name"
+        android:text="@string/beer_label_name"
         android:textSize="24dp"
         android:textStyle="bold" />
 
