--- a/res/layout/main_screen.xml
+++ b/res/layout/main_screen.xml
@@ -26,7 +26,7 @@
             <Button
                 android:id="@+id/contacts_button"
                 style="@style/MainButton"
-                android:text="@string/contacts" />
+                android:text="@string/beers" />
 
             <Button
                 android:id="@+id/about_button"
