--- a/res/layout/detail_toolbar.xml
+++ b/res/layout/detail_toolbar.xml
@@ -11,7 +11,7 @@
         style="@style/ToolbarButton"
         android:layout_weight="0"
         android:onClick="contactsClicked"
-        android:text="@string/beers" />
+        android:text="@string/home" />
 
     <TextView
         android:id="@+id/toolbar_title"
