Adding overlay items to the map view. Also trying to get the Beer list in the Venue screen to work (not quite successfull). TODO: -Make the overlay items on the MapResults screen go to a Venue screen. -Fix the Beer list on the Venue screen. -Create the Beer screen that has information about a beer. -Implement the Beer Finder Web Service to return non-lame data.

--- a/res/layout/venue_screen.xml
+++ b/res/layout/venue_screen.xml
@@ -37,6 +37,13 @@
                 android:text="@string/todo"
                 android:textColor="@color/text_color_black"
                 android:textSize="18dp" />
+
+            <LinearLayout
+                android:id="@+id/venue_beer_list_group"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight=".70" >
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
