Updated strings that are displayed. Fixed a parcable problem with GeoPoints in the venue.

--- a/res/layout/venue_toolbar.xml
+++ b/res/layout/venue_toolbar.xml
@@ -11,7 +11,7 @@
         style="@style/ToolbarButton"
         android:layout_weight="0"
         android:onClick="homeClicked"
-        android:text="@string/home" />
+        android:text="@string/back" />
 
     <TextView
         android:id="@+id/venue_toolbar_title"
