--- a/res/layout/venue_screen.xml
+++ b/res/layout/venue_screen.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:id="@+id/venue_address_label"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+	    		android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:text="@string/todo"
@@ -30,7 +30,7 @@
             <TextView
                 android:id="@+id/venue_phone_number_label"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+	    		android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="12dp"
                 android:layout_weight="1"
@@ -38,12 +38,25 @@
                 android:textColor="@color/text_color_black"
                 android:textSize="18dp" />
 
+			<TextView
+                android:id="@+id/venue_beers_label"
+                android:layout_width="match_parent"
+	    		android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="12dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/beers_label"
+                android:textColor="@color/text_color_black"
+                android:textSize="20dp" />
+
             <LinearLayout
                 android:id="@+id/venue_beer_list_group"
                 android:layout_width="fill_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight=".70" >
             </LinearLayout>
+            
         </LinearLayout>
     </ScrollView>
 
