--- a/res/layout/list_results_item.xml
+++ b/res/layout/list_results_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:background="@drawable/item_background"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:textColor="@color/text_color_black" >
 
     <TextView
         android:id="@+id/list_results_item_name"
