--- a/res/layout/venue_beer_list_item.xml
+++ b/res/layout/venue_beer_list_item.xml
@@ -5,7 +5,8 @@
     android:layout_height="64dp"
     android:layout_margin="5dp"
     android:background="@drawable/item_background"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:textColor="@color/text_color_black" >
 
     <LinearLayout
         android:layout_width="match_parent"
