--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MnTheme" parent="android:Theme.Light.NoTitleBar">
+    <style name="BeerFinderTheme" parent="android:Theme.Light.NoTitleBar">
 	    <item name="android:windowBackground">@drawable/window_background</item>
+	    <item name="android:textColor">@color/text_color_black</item>
 	</style>
     <style name="MainButton" parent="@android:style/Widget">
         <item name="android:layout_width">match_parent</item>
@@ -38,7 +39,7 @@
         <item name="android:paddingBottom">6dp</item>
         <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingRight">12dp</item>
-        <item name="android:shadowColor">#000</item>
+        <item name="android:shadowColor">@color/border</item>
         <item name="android:shadowDx">2.0</item>
         <item name="android:shadowDy">2.0</item>
         <item name="android:shadowRadius">2</item>
