--- a/res/layout/beer_screen.xml
+++ b/res/layout/beer_screen.xml
@@ -19,16 +19,14 @@
             android:orientation="vertical" >
 
      <!-- Hops -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+         
                 <TextView
                     android:id="@+id/beer_hops"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/beer_hops"
                     android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical|center_horizontal"
                     android:textSize="18dp"
                 />
                 
@@ -38,23 +36,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
             		android:layout_marginTop="4dp"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center"
                     android:src="@drawable/na"
-                    
                 />
-            </LinearLayout>
+                
+            
             
     <!-- Body -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+        
                 <TextView
                     android:id="@+id/beer_body"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/beer_body"
+                    android:text="Body"
                     android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical|center_horizontal"
                     android:textSize="18dp"
                 />
                 
@@ -64,22 +60,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
             		android:layout_marginTop="4dp"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center"
                     android:src="@drawable/na"
                 />
-            </LinearLayout>
+                
+          
             
     <!-- Color -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+       
                 <TextView
                     android:id="@+id/beer_color"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/beer_color"
                     android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical|center_horizontal"
                     android:textSize="18dp"
                 />
                 
@@ -89,10 +84,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
             		android:layout_marginTop="4dp"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center"
                     android:src="@drawable/na"
                 />
-            </LinearLayout>
+            
             
             
             
